--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -17,6 +17,12 @@ services:
       - "3000:3000"
     volumes:
       - ./frontend-react-js:/frontend-react-js
+    healthcheck:
+          test: curl --fail https://3000-wokoci-awsbootcampcrudd-pkk2usccdco.ws-eu89.gitpod.io/ || exit 1
+          interval: 60s
+          retries: 5
+          start_period: 20s
+          timeout: 10s      
 
   dynamodb-local:
     # https://stackoverflow.com/questions/67533058/persist-local-dynamodb-data-in-volumes-lack-permission-unable-to-open-databa
