--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,6 +14,11 @@ services:
       - ./backend-flask:/backend-flask
   frontend-react-js:
     environment:
+      REACT_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
+      REACT_APP_AWS_COGNITO_IDENTITY_POOL_ID: "us-east-1_ZlGFtqCgk"
+      REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
+      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_ZlGFtqCgk"
+      REACT_APP_CLIENT_ID: "30e76qe4jlbojla36q609ei15e"
       REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
     build: ./frontend-react-js
     ports:
