--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -23,8 +23,8 @@ services:
       REACT_APP_BACKEND_URL: "https://4567-${GITPOD_WORKSPACE_ID}.${GITPOD_WORKSPACE_CLUSTER_HOST}"
       REACT_APP_AWS_PROJECT_REGION: "${AWS_DEFAULT_REGION}"
       REACT_APP_AWS_COGNITO_REGION: "${AWS_DEFAULT_REGION}"
-      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_NoBGt9lLg"
-      REACT_APP_AWS_CLIENT_ID: "5n0v7oqq1pirg8pf6m37ppcquu"    
+      REACT_APP_AWS_USER_POOLS_ID: "us-east-1_MpT73obqK"
+      REACT_APP_AWS_CLIENT_ID: "4k1di4f3lf157oem6am9msvgjf"    
     build: ./frontend-react-js
     ports:
       - "3000:3000"
