--- a/backend-flask/requirements.txt
+++ b/backend-flask/requirements.txt
@@ -31,3 +31,12 @@ jmespath==1.0.1
 rollbar==0.16.3
 s3transfer==0.6.0
 watchtower==3.0.1
+click==8.1.3
+ecdsa==0.18.0
+Flask==2.2.3
+Flask-AWSCognito==1.3
+itsdangerous==2.1.2
+pyasn1==0.4.8
+python-jose==3.3.0
+rsa==4.9
+Werkzeug==2.2.3
